# dio_etl

./: .env.example  .gitignore  README.md  bank_churn_clean.csv  bank_churn_mensagens.csv  enriquecer_bank_churn.py  etl_ia_generativa.ipynb  extract_sample.py  pyproject.toml  requirements.txt
